# somnos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py  project.py  readme.md
cad/: .gitignore  bottom_housing.step  readme.md  top_housing.step  top_housing_modifier.step
cad/freecad/: Pi Pico.step  assembly.FCStd  bottom_housing.FCStd  bottom_housing_v1.1.FCStd  enc.FCStd  ina219.FCStd  nmos.FCStd  pico.FCStd  top_housing.FCStd  top_modifier.FCStd  usba.FCStd  usbc.FCStd
cad/kicad/project/: fp-lib-table  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  pcb.step  sym-lib-table
docker/: Dockerfile
dral/: readme.md  serial_adapter.py
dral/enc28j60/: enc28j60.yaml
dral/enc28j60/template/: model.dral  peripheral.dral  register.dral
dral/ina219/: ina219.yaml
dral/ina219/template/: model.dral  peripheral.dral  register.dral
firmware/concepts/: i2c_driver_concept.h  network_adapter_concept.h  spi_driver_concept.h
firmware/devices/enc28j60/: enc28j60.h  enc28j60_enums.h
firmware/devices/ina219/: ina219.h
firmware/drivers/concepts/: i2c_driver_concept.h  spi_driver_concept.h
firmware/drivers/pico/: pico_i2c_driver.h  pico_spi_driver.h
firmware/drivers/pico/i2c/inc/: pico_i2c_driver.h
firmware/drivers/pico/i2c/src/: pico_i2c_driver.cpp
firmware/drivers/pico/inc/: pico_i2c_driver.h
firmware/drivers/pico/spi/inc/: pico_spi_driver.h
firmware/drivers/pico/spi/src/: pico_spi_driver.cpp
firmware/drivers/pico/src/: pico_spi_driver.cpp
firmware/lwip/: lwipopts.h
firmware/main/inc/: hw.h
firmware/main/src/: main.cpp
firmware/netif/inc/: netif.h  netif_concept.h
firmware/netif/src/: netif.cpp
firmware/network_interface/: network_interface.h
firmware/regs/: register_model.h
firmware/regs/enc28j60/: common.h  eth.h  mac.h  mii.h  phy.h
firmware/regs/ina219/: base.h
firmware/somnos/inc/: hw.h  objects.h
firmware/somnos/src/: main.cpp  objects.cpp
firmware/utils/: utils.h
inc/: enc28j60.h  enc28j60_new.h  i2c_device.h  i2c_driver_concept.h  ina219.h  misc.h  pico_i2c_driver.h  pico_spi_driver.h  spi_driver_concept.h
regs/: register_model.h
regs/enc28j60/: mac.h  mii.h  register_model.h
regs/enc28j60/enc28j60/: common.h  eth.h  mac.h  mii.h  phy.h
regs/ina219/: base.h  register_model.h
regs/ina219/ina219/: base.h
scripts/: ina219_calibration.py  udp_communicator.py  udp_rcv.py
scripts/prometheus/: get_power.py  power.sh  readme.md
src/: enc28j60.cpp  main.cpp
